Some z-index fixes

--- a/src/assets/style/cmps/AddBoardModal.scss
+++ b/src/assets/style/cmps/AddBoardModal.scss
@@ -3,7 +3,7 @@
     top: 50%;
     left: 50%;
     translate: -50% -50%;
-    z-index: 13;
+    z-index: 15;
 
     border-radius: em(8px, 16px);
     padding: em(32px, 16px);
