--- a/src/assets/style/cmps/BoardDetailsHeader.scss
+++ b/src/assets/style/cmps/BoardDetailsHeader.scss
@@ -3,7 +3,7 @@
     position: sticky;
     left: 0;
     top: 0;
-    z-index: 8;
+
     background-color: #fff;
     column-gap: 16px;
     display: grid;
@@ -14,7 +14,7 @@
     grid-template-columns: fit-content(800px) 1fr;
     grid-template-rows: auto;
     width: 100%;
-    z-index: 11;
+    z-index: 12;
 
     .board-name {
         display: flex;
