--- a/src/assets/style/cmps/BoardHeader.scss
+++ b/src/assets/style/cmps/BoardHeader.scss
@@ -87,16 +87,15 @@
     align-items: center;
     position: absolute;
     top: 110%;
-    z-index: 9;
     background-color: white;
     right: 20%;
     width: max-content;
     box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.2);
     border-radius: em(4px, 16px);
     padding: 10px;
-    z-index: 12;
+    z-index: 8;
 
-    > * {
+    >* {
       font-family: Figtree;
       font-weight: 200;
       font-size: rem(14px);
@@ -121,17 +120,14 @@
   @media screen and (max-width: 632px) {
     .logo-home-nav2 {
       margin-top: 2px;
-        font-size: 0.92rem;
+      font-size: 0.92rem;
     }
-    }
-  
-
-  @media screen and (max-width: 932px) {
   }
 
-  @media screen and (max-width: 1232px) {
-  }
 
-  @media screen and (max-width: 1532px) {
-  }
+  @media screen and (max-width: 932px) {}
+
+  @media screen and (max-width: 1232px) {}
+
+  @media screen and (max-width: 1532px) {}
 }
