--- a/src/assets/style/cmps/DynamicPicker.scss
+++ b/src/assets/style/cmps/DynamicPicker.scss
@@ -128,7 +128,7 @@
         background-color: #64677ab7;
         align-items: center;
         justify-content: center;
-        z-index: 10;
+        z-index: 15;
 
         .img-modal-content {
             position: absolute;
